--- a/pyghack_2019/pubspec.yaml
+++ b/pyghack_2019/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.0+2
+  json_annotation: ^2.0.0
   flutter:
     sdk: flutter
 
@@ -24,7 +26,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+
 dev_dependencies:
+  build_runner: ^1.0.0
+  json_serializable: ^2.0.0
+
   flutter_test:
     sdk: flutter
 
