--- a/pyghack_2019/pubspec.yaml
+++ b/pyghack_2019/pubspec.yaml
@@ -47,6 +47,9 @@ flutter:
     - assets/loginBg.png
     - assets/splashScreen.png
     - assets/welcomeSign.png
+    - assets/signUpSign.png
+    - assets/homeUserSign.png
+    - assets/home.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -59,15 +62,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: Cochin
+      fonts:
+        - asset: assets/Cochin.ttf
+    - family: Blue Highway
+      fonts:
+       - asset: assets/blueHighway.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
